tests/snapshots/gql_snapshots__error_double_arrow.snap
---
source: tests/gql_snapshots.rs
expression: "format!(\"{}\", err)"
---
"Syntax error:  --> 1:10\n  |\n1 | MATCH (a)-->>>(b) RETURN a\n  |          ^---\n  |\n  = expected RETURN, WHERE, WITH, OPTIONAL, UNWIND, LET, mutation_clause, or left_arrow"
