tests/snapshots/gql_snapshots__error_missing_match.snap
---
source: tests/gql_snapshots.rs
expression: "format!(\"{}\", err)"
---
"Syntax error:  --> 1:1\n  |\n1 | RETURN n\n  | ^---\n  |\n  = expected statement"
