tests/snapshots/gql_snapshots__error_unclosed_paren.snap
---
source: tests/gql_snapshots.rs
expression: "format!(\"{}\", err)"
---
"Syntax error:  --> 1:17\n  |\n1 | MATCH (n:Person RETURN n\n  |                 ^---\n  |\n  = expected property_filter"
