tests/snapshots/gql_snapshots__parse_alter_edge_type_drop_property_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Ddl:
  AlterEdgeType:
    name: KNOWS
    action:
      DropProperty: notes
