tests/snapshots/gql_snapshots__parse_alter_node_type_drop_property_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Ddl:
  AlterNodeType:
    name: Person
    action:
      DropProperty: bio
