tests/snapshots/gql_snapshots__parse_avg_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: n
            labels:
              - Person
            properties: []
            where_clause: ~
optional_match_clauses: []
with_path_clause: ~
unwind_clauses: []
where_clause: ~
let_clauses: []
with_clauses: []
return_clause:
  distinct: false
  items:
    - expression:
        Aggregate:
          func: Avg
          distinct: false
          expr:
            Property:
              variable: n
              property: age
      alias: ~
group_by_clause: ~
having_clause: ~
order_clause: ~
limit_clause: ~
